# hus-nlp-practice

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: UD_English_EWT.md  c4-train.00000-of-01024-30K.md  conllu_UD_English_EWT.md  hwu.md  sentiments.md
lab01_16_09/: README.md  __init__.py  main.py
lab01_16_09/core/: dataset_loaders.py  interfaces.py
lab01_16_09/preprocessing/: regex_tokenizer.py  simple_tokenizer.py
lab02_16_09/: README.md  __init__.py  main.py
lab02_16_09/core/: interfaces.py
lab02_16_09/representations/: count_vectorizer.py
lab04_21_10/: README.md  external_imports.py
lab04_21_10/models/: text_classifier.py
lab04_21_10/preparations/: data_loader.py
lab04_21_10/test/: lab5_spark_sentiment_analysis.ipynb  lab5_test.py
lab05_28_10/pytorch_intro/: src.ipynb
lab05_28_10/rnns/: text_classification.ipynb
lab06_18_11/: README.md
notebook/: dependency_parsing.ipynb  pytorch_introduction.ipynb  rnn_ner.ipynb  rnn_pos_tagging.ipynb  rnn_text_classification.ipynb  transformers_introduction.ipynb
report/: lab1.md  lab2.md  lab4.md  lab5.md  lab5_part1.md  lab5_part2.md  lab5_part3.md  lab5_part4.md  lab6_part1.md  lab6_part2.md  labX.md
src/: __init__.py
src/core/: __init__.py  dataset_loaders.py  interfaces.py
src/models/: __init__.py  text_classifier.py
src/pipelines/: __init__.py
src/preprocessing/: __init__.py  tokenizers.py
test/: lab1_test.py  lab2_test.py  lab4_spark_word2vec_demo.py  lab4_test.py  lab4_word2vec_embedding.ipynb  lab5_spark_sentiment_analysis.ipynb  lab5_test.py
(+3 files in other folders)
